crates/sui/tests/snapshots/shell_tests__with_network__source_verification_deprecation__both_flags.sh.snap
---
source: crates/sui/tests/shell_tests.rs
description: tests/shell_tests/with_network/source_verification_deprecation/both_flags.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# SPDX-License-Identifier: Apache-2.0

# test that we get an error if we supply both `--skip-dependency-verification` and `--verify-deps`

echo "=== publish ===" | tee /dev/stderr
bfc client --client.config $CONFIG publish example --skip-dependency-verification --verify-deps

echo "=== upgrade ===" | tee /dev/stderr
bfc client --client.config $CONFIG upgrade example --upgrade-capability 0x1234 --skip-dependency-verification --verify-deps

----- results -----
success: false
exit_code: 2
----- stdout -----
=== publish ===
=== upgrade ===

----- stderr -----
=== publish ===
error: the argument '--skip-dependency-verification' cannot be used with '--verify-deps'

Usage: bfc client publish --skip-dependency-verification <package_path>

For more information, try '--help'.
=== upgrade ===
error: the argument '--skip-dependency-verification' cannot be used with '--verify-deps'

Usage: bfc client upgrade --upgrade-capability <UPGRADE_CAPABILITY> --skip-dependency-verification <package_path>

For more information, try '--help'.
